--- a/burger_arrow/index.html
+++ b/burger_arrow/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Butger to arrow animation</title>
+    <title>Burger to arrow animation</title>
 
     <link rel="stylesheet/less" type="text/css" href="styles.less" />
     <script src="bower_components/less/dist/less-1.7.3.min.js" type="text/javascript"></script>
