--- a/buttons/index.html
+++ b/buttons/index.html
@@ -1,28 +1,22 @@
 <!doctype html>
 <html>
 <head>
-    <title></title>
+    <title>Buttons animations</title>
 
     <link rel="stylesheet/less" type="text/css" href="styles.less" />
     <script src="bower_components/less/dist/less-1.7.3.min.js" type="text/javascript"></script>
 </head>
 <body>
-    <p>description...</p>
-
     <div class="btn">
         <div class="btn-hover btn-hover-left bg-color-blue"></div>
         <span class="btn-content">Hover me</span>
     </div>
 
     <br />
-    
+
     <div class="btn">
         <div class="btn-hover btn-hover-top bg-color-red"></div>
         <span class="btn-content">Hover me</span>
     </div>
-
-    <script>
-        //...
-    </script>
 </body>
 </html>
