--- a/checkboxes/index.html
+++ b/checkboxes/index.html
@@ -1,20 +1,19 @@
 <!doctype html>
 <html>
 <head>
-    <title>Burger to arrow animation</title>
+    <title>Checkboxes</title>
 
     <link rel="stylesheet/less" type="text/css" href="styles.less" />
     <script src="bower_components/less/dist/less-1.7.3.min.js" type="text/javascript"></script>
 </head>
 <body>
-    <p>An animation from <a href="http://www.google.com/design/spec/animation/responsive-interaction.html#">Google Material Design</a></p>
-
+    <p>An attampt to copy <a href="http://www.polymer-project.org/docs/elements/paper-elements.html#paper-checkbox">Polymer's paper-checkbox</a></p>
 
     <input id="toggleBox" type="checkbox" class="hide">
-    <div class="click-area hide"></div>
     <div class="toggle-container">
         <div class="bar top"></div>
-        <div class="bar middle"></div>
+        <div class="bar left"></div>
+        <div class="bar right"></div>
         <div class="bar bottom"></div>
     </div>
 
