restore gh-pages

--- a/checkboxes/index.html
+++ b/checkboxes/index.html
@@ -3,8 +3,8 @@
 <head>
     <title>Checkboxes</title>
 
-    <link rel="stylesheet/less" type="text/css" href="styles.less" />
-    <script src="bower_components/less/dist/less-1.7.3.min.js" type="text/javascript"></script>
+
+    <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 <body>
     <p>An attampt to copy <a href="http://www.polymer-project.org/docs/elements/paper-elements.html#paper-checkbox">Polymer's paper-checkbox</a></p>
