--- a/burger_arrow/index.html
+++ b/burger_arrow/index.html
@@ -3,8 +3,7 @@
 <head>
     <title>Burger to arrow animation</title>
 
-    <link rel="stylesheet/less" type="text/css" href="styles.less" />
-    <script src="bower_components/less/dist/less-1.7.3.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 <body>
     <p>An animation from <a href="http://www.google.com/design/spec/animation/responsive-interaction.html#">Google Material Design</a></p>
