--- a/buttons/index.html
+++ b/buttons/index.html
@@ -2,9 +2,7 @@
 <html>
 <head>
     <title>Buttons animations</title>
-
-    <link rel="stylesheet/less" type="text/css" href="styles.less" />
-    <script src="bower_components/less/dist/less-1.7.3.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 <body>
     <div class="btn">
