--- a/texts/index.html
+++ b/texts/index.html
@@ -3,8 +3,8 @@
 <head>
     <title></title>
 
-    <link rel="stylesheet/less" type="text/css" href="styles.less" />
-    <script src="bower_components/less/dist/less-1.7.3.min.js" type="text/javascript"></script>
+
+    <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 <body>
     <div>
